@@ -13,6 +13,9 @@ SED		= @SED@
 TAR		= @TAR@
 TOUCH		= @TOUCH@
 INSTALL		= @INSTALL@
+INSTALL_PROGRAM	= @INSTALL_PROGRAM@
+INSTALL_DATA	= @INSTALL_DATA@
+INSTALL_DIR	= @INSTALL@ -d
 CPP		= @CPP@
 CC		= @CC@
 
